GC options update